# ai-native-capabilities

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: crp.md  task.md
.github/workflows/: evals.yml
cap-01-decision-intelligence/: README.md  demo.py  golden_principles.md
cap-01-decision-intelligence/agents/: __init__.py  analysis_agent.py  brief_agent.py  graph.py  retrieval_agent.py  supervisor.py  verification_agent.py
cap-01-decision-intelligence/evals/: suite.py
cap-01-decision-intelligence/memory/: __init__.py  episodic.py
cap-01-decision-intelligence/schemas/: brief.py
cap-01-decision-intelligence/specs/: SPEC.md
cap-01-decision-intelligence/tests/: test_analysis_agent.py  test_brief_agent.py  test_cap01_episodic_memory.py  test_cap01_eval_suite.py  test_demo.py  test_graph.py  test_human_gate.py  test_ingestor.py  test_retrieval_agent.py  test_retriever.py  test_seed_corpus.py  test_supervisor.py  test_verification_agent.py
cap-01-decision-intelligence/tests/fixtures/: cap01_eval_cases.json  generate_corpus.py
cap-01-decision-intelligence/tools/: ingestor.py  retriever.py
cap-02-agentic-engineering/: README.md  demo.py  golden_principles.md
cap-02-agentic-engineering/agents/: execution_agent.py  graph.py  loop_runtime.py  mentor_agent.py  mrp_agent.py
cap-02-agentic-engineering/cli/: ace.py
cap-02-agentic-engineering/evals/: suite.py
cap-02-agentic-engineering/memory/: briefing_library.py
cap-02-agentic-engineering/schemas/: __init__.py  briefing_script.py
cap-02-agentic-engineering/specs/: SPEC.md
cap-02-agentic-engineering/tests/: test_agents_and_graph.py  test_briefing_library.py  test_eval_cli_proficiency.py  test_loop_runtime.py  test_security_gate.py  test_validator.py
cap-02-agentic-engineering/tools/: proficiency.py  security_gate.py  validator.py
cap-03-agentic-commerce/: README.md  cap03_loader.py  cap03_schema_loader.py  demo.py  golden_principles.md  schemas.py
cap-03-agentic-commerce/agents/: discovery_agent.py  escalation_agent.py  intent_classifier.py  sparky_graph.py  support_agent.py
cap-03-agentic-commerce/evals/: suite.py
cap-03-agentic-commerce/memory/: session_store.py
cap-03-agentic-commerce/specs/: SPEC.md
cap-03-agentic-commerce/tests/: test_cap03_commerce.py
cap-03-agentic-commerce/tests/fixtures/: intent_test_set.json
cap-03-agentic-commerce/tools/: margin_ranker.py  sentiment.py
cap-03-agentic-commerce/tools/connectors/: catalog.py  customer_profile.py  order_management.py  promotions.py
cap-04-autonomous-operations/: README.md  cap04_loader.py  demo.py  golden_principles.md
cap-04-autonomous-operations/agents/: approval_gate.py  erp_wms_agent.py  exception_agent.py  forecast_agent.py  optimisation_agent.py  replenishment_agent.py  risk_agent.py  supply_chain_graph.py
cap-04-autonomous-operations/evals/: suite.py
cap-04-autonomous-operations/specs/: SPEC.md
cap-04-autonomous-operations/tests/: test_cap04_operations.py
cap-04-autonomous-operations/tests/fixtures/: generate_data.py
cap-04-autonomous-operations/tools/: digital_twin.py  governed_po_store.py
cap-04-autonomous-operations/tools/connectors/: erp.py  wms.py
cap-05-compliance-intelligence/: README.md  cap05_loader.py  demo.py  golden_principles.md
cap-05-compliance-intelligence/agents/: classifier_agent.py  expert_gate.py  gap_agent.py  interpretation_agent.py  kg_agent.py  query_agent.py
cap-05-compliance-intelligence/cli/: review.py
cap-05-compliance-intelligence/evals/: suite.py
cap-05-compliance-intelligence/schemas/: kg_schema.py
cap-05-compliance-intelligence/specs/: SPEC.md
cap-05-compliance-intelligence/tests/: test_cap05_compliance.py
cap-05-compliance-intelligence/tests/fixtures/: generate_corpus.py
cap-05-compliance-intelligence/tools/: audit_trail.py  feed_monitor.py  governed_kg.py  knowledge_graph.py
cap-05-compliance-intelligence/tools/connectors/: use_case_inventory.py
core/: SPEC.md  __init__.py
core/evals/: __init__.py  gate_config.py  metrics.py  suite.py
core/governance/: __init__.py  gates.py  human_gate.py
core/harness/: __init__.py  golden_principles.py  loop.py  memory.py  sensors.py
core/mcp/: __init__.py  base.py  registry.py
core/mcp/mocks/: __init__.py  audit_log.py  knowledge_base.py  web_research.py
core/memory/: __init__.py  episodic.py  procedural.py  semantic.py
core/observability/: __init__.py  cost.py  telemetry.py
core/orchestration/: __init__.py  base_graph.py  base_state.py
core/schemas/: __init__.py  base.py  events.py  memory.py
core/tests/: test_cap05_demo_cli.py  test_cost_telemetry.py  test_db.py  test_episodic_memory.py  test_evals.py  test_export_artifacts.py  test_gate_config.py  test_golden_principles.py  test_governance.py  test_harness_security.py  test_harness_sensors.py  test_health.py  test_local_dashboard.py  test_mcp.py  test_orchestration.py  test_procedural_memory.py  test_schemas.py  test_semantic_memory.py  test_settings.py  test_walkthrough_eu_ai_act.py
core/utils/: __init__.py  db.py  health.py  settings.py
docs/adr/: ADR-001-spec-driven-development.md  ADR-002-harness-engineering.md  ADR-003-protocol-layering.md
docs/architecture/: AGENT_ROUTING.md  MEMORY_ARCHITECTURE.md  STACK.md
docs/case-studies/: README.md
docs/plans/: 2026-06-17-001-feat-ssgm-cap04-po-governance-plan.md  2026-06-17-002-feat-enforcement-harness-roadmap-plan.md  2026-06-17-002-feat-fastapi-eval-dashboard-plan.md
docs/playbooks/: EU_AI_ACT_WALKTHROUGH.md  RAMP_L0_L3.md
scripts/: check_eval_gates.py  check_golden_principles.py  eval_summary.py  export_artifacts.py  health_check.py  init_db.sql  push_to_github.sh  run_evals.py  setup.py  setup_db.py  walkthrough_eu_ai_act.py
scripts/dashboard/: app.py  main.py
scripts/dashboard/templates/: index.html
scripts/templates/artifacts/: compliance_report.html.j2  mrp_report.html.j2  scorecard.html.j2
(+403 files in other folders)
