[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-native-capabilities"
version = "0.1.0"
description = "Five production-grade agentic AI capabilities built spec-first"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["ai", "agents", "langgraph", "mcp", "agentic-ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Orchestration
    "langgraph>=1.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",

    # LLM providers
    "anthropic>=0.40.0",
    "openai>=1.50.0",

    # MCP
    "mcp>=1.0.0",

    # Data & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Vector store
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "rank-bm25>=0.2.2",

    # Memory
    "redis>=5.1.0",

    # Observability
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "langsmith>=0.1.130",

    # Utilities
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.8.0",
    "typer>=0.12.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
cap05 = [
    # Knowledge graph (Cap-05 only)
    "neo4j>=5.25.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "httpx>=0.27.0",  # test client
]

[project.scripts]
health-check = "scripts.health_check:main"
run-evals = "scripts.run_evals:main"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core/tests", "cap-01-decision-intelligence/tests",
             "cap-02-agentic-engineering/tests", "cap-03-agentic-commerce/tests",
             "cap-04-autonomous-operations/tests", "cap-05-compliance-intelligence/tests"]
addopts = "--tb=short -q"

[tool.hatch.build.targets.wheel]
packages = ["core", "cap-01-decision-intelligence", "cap-02-agentic-engineering",
            "cap-03-agentic-commerce", "cap-04-autonomous-operations",
            "cap-05-compliance-intelligence"]
