[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-native-capabilities"
version = "0.1.0"
description = "Five production-grade agentic AI capabilities built spec-first"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["ai", "agents", "langgraph", "mcp", "agentic-ai", "multi-agent", "rag", "langchain", "python", "openai", "anthropic", "ai-agents", "spec-driven-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # ── Orchestration ────────────────────────────────────────────────────────
    # LangGraph 1.0.5 — GA Oct 2025, stable API until 2.0
    # Production users: Uber, LinkedIn, JP Morgan, Klarna, Blackrock, Cisco
    "langgraph>=1.0.5",
    "langchain>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph-checkpoint-postgres>=2.0.0",

    # ── LLM providers ────────────────────────────────────────────────────────
    # Claude (June 2026 current):
    #   claude-opus-4-8           flagship, complex reasoning
    #   claude-sonnet-4-6         balanced, 79.6% SWE-bench
    #   claude-haiku-4-5-20251001 fast, subagent routing
    # DEPRECATED — do not use: any claude-3-* string (retired April 2026)
    "anthropic>=0.40.0",
    # OpenAI (June 2026 current): gpt-5.5 · gpt-5 · gpt-5-mini
    # DEPRECATED — do not use: gpt-4o (retired Feb 2026)
    "openai>=1.60.0",

    # ── MCP ──────────────────────────────────────────────────────────────────
    # Spec 2025-11-25 stable; Streamable HTTP transport (SSE deprecated Mar 2025)
    # OAuth 2.1 + PKCE; Linux Foundation Agentic AI Foundation governance
    "mcp>=1.3.0",

    # ── Data & validation ─────────────────────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # ── Vector store ──────────────────────────────────────────────────────────
    # pgvector 0.7.x: production-grade under ~50M vectors, HNSW + IVFFlat
    # pgvectorscale: Postgres extension (CREATE EXTENSION vectorscale) — not a pip package
    "pgvector>=0.3.0",
    "psycopg[binary]>=3.2.0",
    "rank-bm25>=0.2.2",
    "python-docx>=1.1.2",
    "pypdf>=5.0.0",

    # ── Memory ────────────────────────────────────────────────────────────────
    "redis>=5.2.0",

    # ── Observability ─────────────────────────────────────────────────────────
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "langsmith>=0.2.0",

    # ── Security (mandatory for Cap-02) ──────────────────────────────────────
    "bandit>=1.8.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "structlog>=25.1.0",
]

[project.optional-dependencies]
cap05 = [
    "neo4j>=5.27.0",
    "falkordb>=1.0.0",         # graph layer for Cap-01/Cap-05 (alternative to Neo4j)
]
qdrant = [
    # Overflow option at 50M+ vectors; Qdrant 1.9.x ~850 QPS at p95 ~8ms
    "qdrant-client>=1.12.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "fakeredis>=2.36.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.0",
    # Arize Phoenix — framework-agnostic RAG evals; OTEL-native; self-hostable
    "arize-phoenix>=8.0.0",
    # Braintrust — structured A/B eval CI gates; 1M spans/month free
    "braintrust>=0.0.190",
    # Semgrep — complement to bandit for security scanning in Cap-02
    "semgrep>=1.90.0",
]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "jinja2>=3.1.0",
]

[project.scripts]
health-check = "scripts.health_check:main"
run-evals = "scripts.run_evals:main"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "core/tests",
    "cap-01-decision-intelligence/tests",
    "cap-02-agentic-engineering/tests",
    "cap-03-agentic-commerce/tests",
    "cap-04-autonomous-operations/tests",
    "cap-05-compliance-intelligence/tests",
]
addopts = "--tb=short -q"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "cap-01-decision-intelligence",
    "cap-02-agentic-engineering",
    "cap-03-agentic-commerce",
    "cap-04-autonomous-operations",
    "cap-05-compliance-intelligence",
]
